2002-06-10  Eric Christopher  <echristo@redhat.com>
	* doc/extend.texi (Return Address): Add note explaining the side-
	effects of inlining on __builtin_return_address.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54449 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-10  Eric Christopher  <echristo@redhat.com>
+
+	* doc/extend.texi (Return Address): Add note explaining the side-
+	effects of inlining on __builtin_return_address.
+
 2002-06-10  Tom Tromey  <tromey@redhat.com>
 
 	* Makefile.in (LANGHOOKS_DEF_H): Include langhooks-def.h.
