--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-10  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.md (builtin_zap): Fix thinkos expanding mask.
+	(builtin_zapnot): Likewise.
+
+	* config/alpha/ev5.md: Don't combine shift and mvi insns in one
+	reservation.
+
 2002-06-10  Eric Christopher  <echristo@redhat.com>
 
 	* config/i386/i386.c (ix86_osf_output_function_prologue): Remove
