cfgcleanup.c (try_optimize_cfg): Make sure merge_blocks doesn't merge bb with itself.
	* cfgcleanup.c (try_optimize_cfg): Make sure merge_blocks doesn't
	merge bb with itself.

	* gcc.c-torture/compile/20020605-1.c: New test.

From-SVN: r54456

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-10  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20020605-1.c: New test.
+
 2002-06-07  Roger Sayle  <roger@eyesopen.com>
 
 	* gcc.dg/20020607-2.c: New test case.
