--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-10  Jakub Jelinek  <jakub@redhat.com>
+
+	* cfgcleanup.c (try_optimize_cfg): Make sure merge_blocks doesn't
+	merge bb with itself.
+
 2002-06-10  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.md (builtin_zap): Fix thinkos expanding mask.
