--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-10  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20020605-1.c: New test.
+
 2002-05-29  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gcc.c-torture/execute/20020529-1.c: New test.
