varasm.c (const_hash): Handle FDESC_EXPR like ADDR_EXPR.
	* varasm.c (const_hash): Handle FDESC_EXPR like ADDR_EXPR.
	(compare_constant): Likewise.
	(output_addressed_constants): Likewise.

	* g++.dg/opt/vt1.C: New test.

From-SVN: r54461

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* gcc.c-torture/compile/20020605-1.c: New test.
 
+	* g++.dg/opt/vt1.C: New test.
+
 2002-05-29  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gcc.c-torture/execute/20020529-1.c: New test.
