--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-06-10  Jakub Jelinek  <jakub@redhat.com>
 
+	PR optimization/6842
+	* combine.c (combine_simplify_rtx) [SUBREG]: Don't ICE if VOIDmode
+	operand subreg cannot be simplified.
+
+2002-06-10  Jakub Jelinek  <jakub@redhat.com>
+
 	* varasm.c (const_hash): Handle FDESC_EXPR like ADDR_EXPR.
 	(compare_constant): Likewise.
 	(output_addressed_constants): Likewise.
