--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -6,6 +6,8 @@
 
 	* gcc.dg/20020531-1.c: New test.
 
+	* gcc.dg/20020530-1.c: New test.
+
 2002-06-07  Roger Sayle  <roger@eyesopen.com>
 
 	* gcc.dg/20020607-2.c: New test case.
