PR c/6660 	* c-decl.c (grokfield): Allow user defined types if they declare 	structs or unions for unnamed fields.
	* gcc.dg/20020527-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54466 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-06-10  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c/6660
+	* c-decl.c (grokfield): Allow user defined types if they declare
+	structs or unions for unnamed fields.
+
+2002-06-10  Jakub Jelinek  <jakub@redhat.com>
+
 	PR c/6809
 	* print-rtl.c (print_mem_expr): Don't crash on unnamed fields.
 
