re PR rtl-optimization/6759 (ice when compiling 32 bit sparc code)
	PR optimization/6759
	* cse.c (cse_insn): Fold src_eqv just once, store it folded back into
	the REQ_EQUAL note.

	* g++.dg/opt/cse1.C: New test.

From-SVN: r54471

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -8,6 +8,8 @@
 
 	* gcc.dg/20020527-1.c: New test.
 
+	* g++.dg/opt/cse1.C: New test.
+
 2002-05-29  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gcc.c-torture/execute/20020529-1.c: New test.
