--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,20 @@
 2002-06-10  Roger Sayle  <roger@eyesopen.com>
+	    Andreas Jaeger <aj@suse.de>
+
+	* cfgrtl.c (create_basic_block_structure):  Remove index argument
+	and use last_basic_block++ instead.  (create_basic_block): Update.
+	* cfgbuild.c (find_basic_blocks_1): Likewise.
+
+	* cfgrtl.c (compute_bb_for_insn): Remove unused "max" argument.
+	* haifa-sched.c (sched_init): Update compute_bb_for_insn caller.
+	* sched-ebb.c (schedule_ebbs): Likewise.
+	* sched-rgn.c (schedule_insns): Likewise.
+	* ssa-ccp.c (ssa_const_prop): Likewise.
+	* ssa-dcs.c (ssa_eliminate_dead_code): Likewise.
+	* toplev.c (rest_of_compilation): Likewise.
+	* config/ia64/ia64.c (ia64_reorg): Likewise.
+
+2002-06-10  Roger Sayle  <roger@eyesopen.com>
 
 	* simplify-rtx.c (simplify_replace_rtx): Allow replacement
 	of matching registers.
