--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-10  Roger Sayle  <roger@eyesopen.com>
+
+	* toplev.c (rest_of_compilation): Revert flag_if_conversion change.
+
 2002-06-10  Zack Weinberg  <zack@codesourcery.com>
 
 	* Makefile.in (MACHMODE_H): Add @extra_modes_file@.
