* libjava.lang/PR6520.java: New file.  For PR java/6520.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54482 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-10  Tom Tromey  <tromey@redhat.com>
+
+	* libjava.lang/PR6520.java: New file.  For PR java/6520.
+
 2002-06-04  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.compile/T20020604.java: New file.
