* config/xtensa/xtensa.c (override_options): Don't warn about         using -fpic or -fPIC when PIC is enabled by default.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54483 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-10  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/xtensa.c (override_options): Don't warn about
+	using -fpic or -fPIC when PIC is enabled by default.
+
 2002-06-10  Roger Sayle  <roger@eyesopen.com>
 
 	* toplev.c (rest_of_compilation): Revert flag_if_conversion change.
